syntax = "proto3";

package fairyring.icq;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "fairyring/icq/params.proto";

option go_package = "fairyring/x/icq/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/fairyring/icq/params";
  
  }
  
  // Queries a list of HostHeight items.
  rpc HostHeight (QueryHostHeightRequest) returns (QueryHostHeightResponse) {
    option (google.api.http).get = "/fairyring/icq/host_height";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryHostHeightRequest {}

message QueryHostHeightResponse {
  uint64 height = 1;
}

